# qlog

./: .gitignore  AGENTS.md  CONFIGURATION.md  Cargo.toml  LICENSE  README.md
.opencode/agent/: dev.md  orchestrator.md  writer.md
.qlog/: qlog.toml
examples/: test_loader.rs
openspec/changes/add-clipboard-selection/: proposal.md  tasks.md
openspec/changes/add-search-find-mode/: tasks.md
openspec/changes/boyer-moore-horspool/: proposal.md  tasks.md
openspec/changes/command-autocomplete/: design.md  proposal.md  tasks.md
openspec/changes/filter-color-highlighting/: design.md  proposal.md  tasks.md
openspec/changes/filter-groups/: tasks.md
openspec/changes/filter-management-system/: design.md  proposal.md  tasks.md
openspec/changes/index-based-filtering/: tasks.md
openspec/changes/optimize-memory-performance/: proposal.md  tasks.md
openspec/changes/streaming-file-loader/: design.md  proposal.md  tasks.md
openspec/changes/write-command/: proposal.md  tasks.md
openspec/specs/configurable-log-coloring/: spec.md
openspec/specs/content-wrap-mode/: spec.md
openspec/specs/file-write/: spec.md
openspec/specs/filter-groups/: spec.md
openspec/specs/focus-modes/: spec.md
openspec/specs/mmap-log-storage/: spec.md
src/: app.rs  clipboard.rs  command.rs  config.rs  key_bindings.rs  lib.rs  main.rs
src/model/: filter.rs  line_info.rs  log_entry.rs  log_storage.rs  mmap_str.rs  mod.rs  selection.rs  timestamp.rs  visual_line_cache.rs
src/storage/: loader.rs  mod.rs
src/ui/: mod.rs
tests/: filter_tests.rs  parser_tests.rs
(+55 files in other folders)
