[package]
name = "como-log-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.24"
crossterm = "0.27"
regex = "1.10"
memmap2 = "0.9"
rayon = "1.8"
atty = "0.2"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"

[[example]]
name = "test_loader"
path = "examples/test_loader.rs"
