[package]
name = "qlog-tui"
version = "0.1.0"
edition = "2021"
description = "TUI log viewer with Helix-style keybindings for viewing and filtering large log files"
license = "MIT"
repository = "https://github.com/jojonv/qlog"
authors = ["jojonv <novakj@outlook.com>"]
keywords = ["log", "viewer", "tui", "cli", "filter"]
categories = ["command-line-utilities", "development-tools::debugging"]
readme = "README.md"

[lib]
name = "qlog"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.24"
crossterm = "0.27"
regex = "1.10"
memmap2 = "0.9"
rayon = "1.8"
atty = "0.2"
walkdir = "2.4"
libc = "0.2"
toml = "0.8"
dirs = "5.0"
lru = "0.12"
arboard = "3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"

[[example]]
name = "test_loader"
path = "examples/test_loader.rs"
